--- a/lib/Makefile
+++ b/lib/Makefile
@@ -33,11 +33,11 @@ endif
 
 DSO_O = dsohandle.o
 
-I386_O = libtcc1.o alloca.o alloca-bt.o $(BT_O) stdatomic.o
-X86_64_O = libtcc1.o alloca.o alloca-bt.o $(BT_O) stdatomic.o
-ARM_O = libtcc1.o armeabi.o alloca.o armflush.o fetch_and_add.o $(BT_O)
-ARM64_O = lib-arm64.o fetch_and_add.o $(BT_O)
-RISCV64_O = lib-arm64.o fetch_and_add.o $(BT_O)
+I386_O = libtcc1.o alloca.o
+X86_64_O = libtcc1.o alloca.o
+ARM_O = libtcc1.o armeabi.o alloca.o armflush.o
+ARM64_O = lib-arm64.o
+RISCV64_O = lib-arm64.o
 WIN_O = crt1.o crt1w.o wincrt1.o wincrt1w.o dllcrt1.o dllmain.o
 
 OBJ-i386 = $(I386_O) $(BCHECK_O) $(DSO_O)
